Fix spacing of content on mobile.

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -123,7 +123,7 @@ body {
     header.top-header {
       width: 100%;
       height: $header-height + 50px;
-      // position: absolute;
+      position: absolute;
       top: 0;
     }
 
@@ -154,9 +154,9 @@ body {
   }
 
   @media (max-width: $tablet) and (orientation: landscape) {
-    .main-content {
-      margin-top: $header-height;
-    }
+    // .main-content {
+    //   margin-top: $header-height;
+    // }
     nav.navbar.container {
       margin-right: 3.5 * $generic-spacing;
       position: absolute;
